# modsync

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
modsync-app/: .gitignore  dl.html  index.html  ms.html  package-lock.json  package.json  vite.config.ts
modsync-app/public/locales/en/: translation.json
modsync-app/public/locales/zh-CN/: translation.json
modsync-app/src/: App.tsx  dl.tsx  index.tsx  main.tsx  ms.tsx  titlebar.tsx
modsync-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
modsync-app/src-tauri/capabilities/: default.json
modsync-app/src-tauri/icons/: icon.icns
modsync-app/src-tauri/src/: lib.rs  main.rs  task_pool.rs
modsync-app/src/dl/: App.tsx  main.tsx
modsync-app/src/ms/: App.tsx
modsync-app/src/utils/: config.tsx  i18n.tsx  messagebox.tsx
modsync-configure-app/: index.html  package-lock.json  package.json
modsync-configure-app/src/: App.tsx
modsync-configure-app/src-tauri/: Cargo.toml  tauri.conf.json
modsync-configure-app/src-tauri/capabilities/: default.json
modsync-configure-app/src-tauri/icons/: icon.icns
modsync-configure-app/src-tauri/src/: main.rs
modsync-core/: Cargo.toml
modsync-core/src/: error.rs  lib.rs  msclient.rs  msconfig.rs  msmod.rs  mstask.rs  mstaskmanager.rs  syncplan.rs  utils.rs
modsync-imgui/: .gitignore  CMakeLists.txt
modsync-imgui/cmake/: cpr.cmake  imgui.cmake  spdlog.cmake
modsync-imgui/srcs/: common.hpp  gui_service.cpp  gui_service.h  listgenerater.cpp  modsync.cpp
modsync-next/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
modsync-next-configurator/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
modsync-next-configurator/src/: App.tsx  constants.ts  index.css  types.ts
modsync-next-configurator/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
modsync-next-configurator/src-tauri/icons/: icon.icns
modsync-next-configurator/src-tauri/src/: lib.rs  main.rs
modsync-next-configurator/src/components/: HistoryItem.tsx
modsync-next/src/: index.css  index.tsx  mockData.ts  runtimecontext.tsx  types.ts  utils.tsx
modsync-next/src-tauri/: Cargo.toml  tauri.conf.json
modsync-next/src-tauri/icons/: icon.icns
modsync-next/src-tauri/src/: lib.rs  main.rs  task.rs  taskmanager.rs
modsync-next/src/components/: Badge.tsx  HistoryItem.tsx  Layout.tsx  ModDiffListItem.tsx  SyncButton.tsx  TaskProgress.tsx
modsync-next/src/views/: About.tsx  Changelog.tsx  Dashboard.tsx  DiffViewer.tsx  TaskManager.tsx  Utilities.tsx  testpage.tsx
