[workspace]
members = [
  "modsync-core",
  "modsync-next/src-tauri",
  "modsync-next-configurator/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
