[package]
name = "modsync-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
futures = { version = "0.3"}
zip = "2.1.3"
toml = "0.8.14"
async-trait = "0.1.80"

[[bin]]
name = "gendiff"
path = "src/bin/gendiff.rs"
