[package]
name = "modsync-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { workspace = true }
futures-util = "0.3"
md5 = "0.7"
futures = { version = "0.3"}
zip = "2.1.3"
toml = "0.8.14"
async-trait = "0.1.80"
thiserror = { workspace = true }

[[bin]]
name = "gendiff"
path = "src/bin/gendiff.rs"
