[package]
name = "modsync-app"
version = "0.1.0"
description = "ModSync on Tauri"
authors = ["nicefish4520"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
build-info-build = "0.0.36"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-process = "2.0.0-beta.6"
tokio = { version = "1", features = ["full"] }
modsync-core = { path = "../../modsync-core" }
build-info = "0.0.36"
thiserror = "1.0.63"
