[package]
name = "modsync-configure-app"
version = "0.0.1"
description = "ModSync Configure on Tauri"
authors = ["nicefish4520"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
modsync-core = { path = "../../modsync-core" }
tauri-plugin-dialog = "2.0.0-beta.9"
tauri-plugin-process = "2.0.0-beta.6"
